fix: Sources - remove extra padding

--- a/src/components/sources/styles.css
+++ b/src/components/sources/styles.css
@@ -1,8 +1,5 @@
 .root {
-  padding-top: var(--space-large);
-  padding-bottom: var(--space-large);
   border-bottom: 1px solid var(--color-gray-ultra-light);
-  margin: 0 0 var(--space-large);
 }
 
 .example {
